# embedded

./: .gitignore  CMakeLists.txt
components/ext_ble/: CMakeLists.txt  ble.c  gatt_service.c
components/ext_dht11/: CMakeLists.txt  dht11.c
components/ext_gnss/: CMakeLists.txt  ext_gnss.c
components/ext_i2c/: CMakeLists.txt  ext_i2c.c
components/ext_mpu6050/: CMakeLists.txt  ext_i2c.c  ext_mpu6050.c
frontend/: README.md
frontend/PiezoApp/: App.tsx  DeviceConnectionModal.tsx  app.json  package-lock.json  package.json  tsconfig.json  useBLE.tsx
frontend/PiezoApp-1/: App.js  app.json  package-lock.json  package.json
main/: CMakeLists.txt  hello_world_main.c
nuke_piezo_fly/: .clang-format  .clang-tidy  .cppcheck_suppress.cfg  .gitignore  CMakeLists.txt  Doxyfile  extra_script.py  platformio.ini  sdkconfig.esp32
nuke_piezo_fly/assets/: test_ble.py
nuke_piezo_fly/cmake_helper/: clang_format.cmake
nuke_piezo_fly/modules/sensor/: CMakeLists.txt
nuke_piezo_fly/modules/sensor/include/sensor/: senapi_sensor_api.h  senaty_sensor_api_types.h  sencty_sensor_config_types.h
nuke_piezo_fly/modules/sensor/src/: senapi_sensor_api.c  sencty_sensor_config_types.c  sengns_sensor_gnss.c  sengns_sensor_gnss.h  senimu_sensor_imu.c  senimu_sensor_imu.h  sennav_sensor_gnss.c  sennav_sensor_gnss.h  sentem_sensor_temperature.c  sentem_sensor_temperature.h
nuke_piezo_fly/src/: CMakeLists.txt  bleapi_bluetooth_api.c  comsys_system_adapter.c  main.c  sencfg_sensor_config.c  senctr_sensor_control.c  stocfg_storage_config.c  stoctr_storage_control.c
test/: test_ble.py
(+35 files in other folders)
